--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -47,7 +47,8 @@
 		</div>
 		<div>
 			<h3>Name your taco creation:</h3>
-			<input type="text" th:field="*{name}"/>
+			<!-- <input type="text" th:field="*{name}"/> -->
+			<input type="text"/>
 			<br/>
 			<button>Submit your taco</button>
 		</div>
